--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -99,7 +99,7 @@
 						</div><div class="text-center feature col-sm-3">
 							<i class="icon-clock-streamline-time"></i>
 							<h5>3 месяца</h5>
-							<p>- длительность курса Программы восстановления волос RENOKIN, после которого вы увидите результат</p>
+							<p>- длительность курса Программы восстановления волос RENOKIN, после которого Вы увидите результат</p>
 						</div>
 					</div>
 				</div>	
