--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -62,7 +62,7 @@
 						<div class="text-center col-sm-12">
 							<h3>Программа восстановления&nbsp;волос RENOKIN</h3>
 							<h5>Линия пептидных средств от выпадения волос из Южной Кореи</h5>
-							<a class="btn btn-filled super-action" href="http://www.renokin-russia.ru/buy">Купите сейчас!</a>
+							<a class="btn btn-filled super-action" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
 						</div>
 					</div>
 				</div>
@@ -251,7 +251,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<a class="btn btn-filled super-action" href="http://www.renokin-russia.ru/buy">Купите сейчас!</a>
+							<a class="btn btn-filled super-action" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
 						</div>
 					</div>
 				</div>
