--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -186,9 +186,7 @@
 								<div class="price-container">
 									<span class="dollar">РУБ.</span>
 									<span class="price">1390</span>
-									<span class="terms"> 
-										
-									</span>
+									<span class="terms"> </span>
 								</div>
 								<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
 							</div>
