replaced ipad img with how-it-works.png

--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -144,7 +144,7 @@
 					</div>
 					<div class="row v-align-children">
 						<div class="col-sm-6 text-center feature">
-							<img alt="Feature Image" src="img/ipad2.png">
+							<img alt="Feature Image" src="img/how-it-works.png">
 						</div>
 			
 						<div class="col-sm-6 col-md-offset-1 feature col-md-5">
