--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -231,7 +231,7 @@
 									<span class="price">7791</span>
 									<span class="terms"> </span>
 								</div>
-								<p>Специальная цена! Вы экономите 3339 руб.</p>
+								<p><b>СПЕЦИАЛЬНАЯ ЦЕНА! ВЫ ЭКОНОМИТЕ 3339 руб.</b></p>
 							</div>
 						</a>
 					</div>
