pricing-option red

--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -222,7 +222,7 @@
 						</a>
 					
 						<a href="#">
-							<div class="col-md-3 col-sm-6 pricing-option text-center">
+							<div class="col-md-3 col-sm-6 pricing-option special-option text-center">
 								<img src="img/lotions-set.png" class="normal-img" />
 								<img src="img/lotions-set-active.png" class="active-img" />
 								<h6>НАБОР - 3 ЛОСЬОНА</h6>
@@ -231,7 +231,8 @@
 									<span class="price">7791</span>
 									<span class="terms"> </span>
 								</div>
-								<p>Специальная цена! Вы экономите 3339 руб.</p>
+								<p>Специальная цена!</p>
+								<p class="text-red">Вы экономите 3339 руб.</p>
 							</div>
 						</a>
 					</div>
