--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -95,7 +95,7 @@
 						<div class="text-center feature col-sm-3">
 							<i class="icon-first-aid-medecine-shield-streamline"></i>
 							<h5>Безопасность и эффект</h5>
-							<p>RENOKIN прошел многочисленные научные испытания в институте ProDerm в Германии, которые доказали его гипоаллергенность и эффективность</p>
+							<p>RENOKIN прошел многочисленные научные испытания в институте ProDerm в Германии. Средство гипоаллергенно, не содержит гормонов и химических стимуляторов</p>
 						</div><div class="text-center feature col-sm-3">
 							<i class="icon-clock-streamline-time"></i>
 							<h5>3 месяца</h5>
