--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -150,7 +150,7 @@
 			
 						<div class="col-sm-6 col-md-offset-1 feature col-md-5">
 							<h4>Как это работает?</h4>
-							<p><font> size=6 Биомиметические пептиды - это биосинтезированные пепдиты, которые <b>идентичны человеческим</b>. В состав RENOKIN входят три вида таких пептидов: CG-Nokkin, CG-Keramin2 и CG-WINT.<br><br>Двойная инкапсуляция пептидов позволяет проникать через эпидермис <b>непосредственно в волосяной фолликул</b>.<br><br>Комплекс пептидов <b>стимулирует факторы роста волос</b> и запускает тот же механизм генерации фолликулов, который существует в человеческом организме.</font></p>
+							<p><font> size="6" Биомиметические пептиды - это биосинтезированные пепдиты, которые <b>идентичны человеческим</b>. В состав RENOKIN входят три вида таких пептидов: CG-Nokkin, CG-Keramin2 и CG-WINT.<br><br>Двойная инкапсуляция пептидов позволяет проникать через эпидермис <b>непосредственно в волосяной фолликул</b>.<br><br>Комплекс пептидов <b>стимулирует факторы роста волос</b> и запускает тот же механизм генерации фолликулов, который существует в человеческом организме.</font></p>
 						</div>
 					</div>
 				</div>
