--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -95,11 +95,11 @@
 						<div class="text-center feature col-sm-3">
 							<i class="icon-first-aid-medecine-shield-streamline"></i>
 							<h5>Безопасность и эффект</h5>
-							<p>RENOKIN прошел многочисленные научные испытания в институте ProDerm в Германии. Средство гипоаллергенно, не содержит гормонов и химических стимуляторов</p>
+							<p><font size="4">RENOKIN прошел многочисленные научные испытания в институте ProDerm в Германии. Средство гипоаллергенно, не содержит гормонов и химических стимуляторов</font></p>
 						</div><div class="text-center feature col-sm-3">
 							<i class="icon-clock-streamline-time"></i>
 							<h5>3 месяца</h5>
-							<p>- длительность курса Программы восстановления волос RENOKIN, после которого Вы увидите результат</p>
+							<p><font size="4">- длительность курса Программы восстановления волос RENOKIN, после которого Вы увидите результат</font></p>
 						</div>
 					</div>
 				</div>	
