--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -110,7 +110,7 @@
 					<div class="row">
 						<div class="col-md-offset-1 col-sm-12 text-center col-md-10">
 							<h4>ПРОГРАММА ВОССТАНОВЛЕНИЯ ВОЛОС RENOKIN</h4>
-							<p>Линейка средств состоит из трех продуктов:</p>
+							<p><font size="5">Линейка средств состоит из трех продуктов:</font></p>
 						</div>
 					</div>
 				
