--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -118,7 +118,7 @@
 						<div class="text-center feature col-sm-4">
 							<img alt="Feature Image" src="img/shampoo-big.png">
 							<h5>Шампунь</h5>
-							<p>Эффективно очищает волосы и кожу головы, создает здоровую среду и подготавливает кожу к примнению лосьона&nbsp;</p>
+							<p><font size"4">Эффективно очищает волосы и кожу головы, создает здоровую среду и подготавливает кожу к примнению лосьона&nbsp;</font></p>
 						</div>
 					
 						<div class="col-sm-4 text-center feature">
