--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -130,7 +130,7 @@
 						<div class="col-sm-4 text-center feature">
 							<img alt="Feature Image" src="img/lotion-big.png">
 							<h5>Лосьон</h5>
-							<p>Спрей RENOKIN - основной элемент Программы, в его состав входит комплекс биомиметических пептидов. Он стимулирует рост волос и способствует сохранению волосяных фолликулов. Наносится на кожу головы два раза в сутки - утром и вечером.
+							<p><font size"4">Спрей RENOKIN - основной элемент Программы, в его состав входит комплекс биомиметических пептидов. Он стимулирует рост волос и способствует сохранению волосяных фолликулов. Наносится на кожу головы два раза в сутки - утром и вечером.</font>
 							</p>
 						</div>
 					</div>
