--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -124,7 +124,7 @@
 						<div class="col-sm-4 text-center feature">
 							<img alt="Feature Image" src="img/conditioner-big.png">
 							<h5>Кондиционер</h5>
-							<p>Придает блеск и мягкость тонким поврежденным волосам. Обеспечивает кожу головы питанием, формирует оптимальный pH-баланс и предотвращает сухость волос и кожи головы</p>
+							<p><font size="4">Придает блеск и мягкость тонким поврежденным волосам. Обеспечивает кожу головы питанием, формирует оптимальный pH-баланс и предотвращает сухость волос и кожи головы</font></p>
 						</div>
 					
 						<div class="col-sm-4 text-center feature">
