--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -118,19 +118,19 @@
 						<div class="text-center feature col-sm-4">
 							<img alt="Feature Image" src="img/shampoo-big.png">
 							<h5>Шампунь</h5>
-							<p><font size"4">Эффективно очищает волосы и кожу головы, создает здоровую среду и подготавливает кожу к примнению лосьона&nbsp;</font></p>
+							<p><font size="3,5">Эффективно очищает волосы и кожу головы, создает здоровую среду и подготавливает кожу к примнению лосьона&nbsp;</font></p>
 						</div>
 					
 						<div class="col-sm-4 text-center feature">
 							<img alt="Feature Image" src="img/conditioner-big.png">
 							<h5>Кондиционер</h5>
-							<p><font size="4">Придает блеск и мягкость тонким поврежденным волосам. Обеспечивает кожу головы питанием, формирует оптимальный pH-баланс и предотвращает сухость волос и кожи головы</font></p>
+							<p><font size="3,5">Придает блеск и мягкость тонким поврежденным волосам. Обеспечивает кожу головы питанием, формирует оптимальный pH-баланс и предотвращает сухость волос и кожи головы</font></p>
 						</div>
 					
 						<div class="col-sm-4 text-center feature">
 							<img alt="Feature Image" src="img/lotion-big.png">
 							<h5>Лосьон</h5>
-							<p><font size"4">Спрей RENOKIN - основной элемент Программы, в его состав входит комплекс биомиметических пептидов. Он стимулирует рост волос и способствует сохранению волосяных фолликулов. Наносится на кожу головы два раза в сутки - утром и вечером.</font>
+							<p><font size="3,5">Спрей RENOKIN - основной элемент Программы, в его состав входит комплекс биомиметических пептидов. Он стимулирует рост волос и способствует сохранению волосяных фолликулов. Наносится на кожу головы два раза в сутки - утром и вечером.</font>
 							</p>
 						</div>
 					</div>
