--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -83,7 +83,7 @@
 							<i class="icon-link-streamline"></i>
 							<h5>Пептидные технологии</h5>
 							<p>
-								<font size="3,5">Первое в мире средство на основе запатентованных биомиметических пептидов - стимулирует рост волос и восстанавливает волосяные фолликулы</font></font></p>
+								Первое в мире средство на основе запатентованных биомиметических пептидов - стимулирует рост волос и восстанавливает волосяные фолликулы</p>
 						</div>
 					
 						<div class="text-center feature col-sm-3">
