--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -61,7 +61,7 @@
 					<div class="row">
 						<div class="text-center col-sm-12">
 							<h3>Программа восстановления&nbsp;волос RENOKIN</h3>
-							<h5><font size ="5">Инновационный комплекс пептидов от выпадения волос из Южной Кореи</font></h5>
+							<h5><font size ="5">Инновационный комплекс пептидов против выпадения волос из Южной Кореи</font></h5>
 							<a class="btn btn-filled super-action" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
 						</div>
 					</div>
