--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -130,7 +130,7 @@
 						<div class="col-sm-4 text-center feature">
 							<img alt="Feature Image" src="img/lotion-big.png">
 							<h5>Лосьон</h5>
-							<p><font size="3,5">Основное средство Программы. В его состав входит комплекс пептидов, который стимулирует рост волос и способствует сохранению волосяных фолликулов. Лосьон-спрей имеет бесцветную нелипкую консистенцию, наносится на кожу головы два раза в сутки - утром и вечером, его не нужно смывать</font>
+							<p><font size="3,5">Основное средство Программы. Содержит комплекс пептидов, который стимулирует рост волос и способствует сохранению волосяных фолликулов. Лосьон-спрей имеет бесцветную нелипкую консистенцию, наносится на кожу головы два раза в сутки - утром и вечером</font>
 							</p>
 						</div>
 					</div>
