--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -150,7 +150,7 @@
 			
 						<div class="col-sm-6 col-md-offset-1 feature col-md-5">
 							<h4>Как это работает?</h4>
-							<p><font size="4">Биомиметические пептиды - это биосинтезированные пепдиты, которые <b>идентичны человеческим</b>. В состав RENOKIN входят три вида таких пептидов: CG-Nokkin, CG-Keramin2 и CG-WINT.<br><br>Пептиды способствуют образованию новых капиляров, которые окутывают волосяную луковицу, <b>усиливают кровоснабжение и питание</b> волосяных фолликулов, укрепляя их.<br><br><b>За счет этого структура волос значительно улучшается</b>, прекращается их избыточное выпадение и начинается активный рост новых волос. Волосы становятся густыми и здоровыми.</font></p>
+							<p><font size="4">Биомиметические пептиды - это биосинтезированные пепдиты, которые <b>идентичны человеческим</b>. В состав RENOKIN входят три вида таких пептидов: CG-Nokkin, CG-Keramin2 и CG-WINT.<br><br>Пептиды способствуют образованию новых капиляров, которые окутывают волосяную луковицу, <b>усиливают кровоснабжение и питание</b> волосяных фолликулов, укрепляя их.<br><br>За счет этого <b>структура волос значительно улучшается</b>, прекращается их избыточное выпадение и начинается активный рост новых волос. Волосы становятся густыми и здоровыми.</font></p>
 						</div>
 					</div>
 				</div>
