how-it-works img

--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -145,7 +145,7 @@
 				<div class="container">
 					<div class="row v-align-children">
 						<div class="col-sm-6 text-center feature">
-							<img alt="Feature Image" src="img/peptide-no-bg.png">
+							<img alt="Feature Image" src="img/how-it-works.png">
 						</div>
 			
 						<div class="col-sm-6 col-md-offset-1 feature col-md-5">
