--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -167,7 +167,7 @@
 					</div>
 				</div>
 			
-				<img alt="Macbook" class="pull-right" src="img/macbook.jpg">
+				<img alt="Macbook" class="pull-right" src="img/peptide-no-bg.png">
 			</section>
 			
 			<section class="pricing pricing-3">
