--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -253,7 +253,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<a class="btn btn-filled super-action btn-red" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
+							<a class="btn btn-filled super-action btn-gold" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
 						</div>
 					</div>
 				</div>
