red btn and product-line link

--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -162,7 +162,7 @@
 						<div class="col-md-offset-1 col-sm-10 col-sm-offset-1 text-center col-md-8">
 							<h6>Почему renokin?</h6>
 							<h4>Высокая эффективность RENOKIN была доказана в многочисленных, достоверных клинических исследованиях in-vitro и in-vivo</h4>
-							<a href="#" class="btn">Узнать больше »</a>
+							<a href="http://www.renokin-russia.ru/product-line/" class="btn">Узнать больше »</a>
 						</div>
 					</div>
 				</div>
@@ -253,7 +253,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<a class="btn btn-filled super-action btn-gold" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
+							<a class="btn btn-filled super-action btn-red" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
 						</div>
 					</div>
 				</div>
