--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Edit title tag</title>
+        <title>Активатор роста волос</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/icons.min.css" rel="stylesheet" type="text/css" media="all"/>
