btn-red for first button too

--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -62,7 +62,7 @@
 						<div class="text-center col-sm-12">
 							<h3>Программа восстановления&nbsp;волос RENOKIN</h3>
 							<h5><font size ="5">Инновационная линия средств от выпадения волос из Южной Кореи</font></h5>
-							<a class="btn btn-filled super-action" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
+							<a class="btn btn-filled btn-red super-action" href="http://www.renokin-russia.ru/buy">Купить сейчас!</a>
 						</div>
 					</div>
 				</div>
