meta description and page title

--- a/renokin-landing/index.html
+++ b/renokin-landing/index.html
@@ -3,8 +3,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Активатор роста волос</title>
+        <title>Активатор роста волос Renokin - Купить On-line</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Линия инновационных средств для активации роста волос Renokin. Применяется в домашних условиях. Специальная цена, доставка по всей России." />
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/icons.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
