--- a/clang/index.html
+++ b/clang/index.html
@@ -20,7 +20,7 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <!--<link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">-->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Программирование на языке С</a>
+                <a class="navbar-brand" href="#page-top" data-i18n="app.name"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -537,6 +537,9 @@
 
     <!-- i18next -->
     <script src="../libs/i18next/i18next-1.10.1.min.js"></script>
+
+    <!-- The app itself -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
