--- a/js-guides/index.html
+++ b/js-guides/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <title>JavaScript Guides</title>
 
@@ -28,19 +28,19 @@
                     <ol class="ol-1">
                         <li>
                             <div>
-                                <h2>Простые компоненты на jQuery</h2>
+                                <h2>РџСЂРѕСЃС‚С‹Рµ РєРѕРјРїРѕРЅРµРЅС‚С‹ РЅР° jQuery</h2>
                                 <p>
-                                    <h4>Когда применять?</h4>
+                                    <h4>РљРѕРіРґР° РїСЂРёРјРµРЅСЏС‚СЊ?</h4>
                                     <ul>
                                         <li>
-                                            Страница генерируется на сервере (server-side rendering)
+                                            РЎС‚СЂР°РЅРёС†Р° РіРµРЅРµСЂРёСЂСѓРµС‚СЃСЏ РЅР° СЃРµСЂРІРµСЂРµ (server-side rendering)
                                         </li>
                                         <li>
-                                            На странице подключен jQuery (возможно также Twitter Bootstrap)
+                                            РќР° СЃС‚СЂР°РЅРёС†Рµ РїРѕРґРєР»СЋС‡РµРЅ jQuery (РІРѕР·РјРѕР¶РЅРѕ С‚Р°РєР¶Рµ Twitter Bootstrap)
                                         </li>
                                     </ul>
 
-                                    <h4>Пример</h4>
+                                    <h4>РџСЂРёРјРµСЂ</h4>
                                     <iframe width="100%" height="300" src="//jsfiddle.net/EvAlex/vhwm895y/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
                                 </p>                                
                             </div>
