--- a/js-guides/index.html
+++ b/js-guides/index.html
@@ -41,8 +41,44 @@
                                     </ul>
 
                                     <h4>Пример</h4>
-                                    <iframe width="100%" height="300" src="//jsfiddle.net/EvAlex/vhwm895y/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+                                    <iframe width="100%" 
+                                            height="300" 
+                                            src="//jsfiddle.net/EvAlex/vhwm895y/embedded/" 
+                                            allowfullscreen="allowfullscreen" 
+                                            frameborder="0">
+                                    </iframe>
                                 </p>                                
+                                <h4>Пояснения</h4>
+                                <p>
+                                    В примере использован подход к созданию компонентов, подобный тому, что 
+                                    применяется в Twitter Bootstrap. Те HTML теги, с которыми взаимодействует 
+                                    JavaScript код компонента, размечены специальными css-классами, о которых 
+                                    известно коду компонента. Для того, чтобы компонент правильно работал, 
+                                    необходимо правильно пометить теги в вёрстке компонента css-классами.
+                                    По этим css-классам код компонента будет искать нужные ему элементы внутри
+                                    корневого тега компонента.
+                                    
+                                    Код компонента организован в виде класса. В конструктор класса компонента
+                                    передаётся корневой HTML элемент, обёрнутый в jQuery. Код компонента работает
+                                    только с теми узлами DOM, которые находятся внутри этого корневого элемента
+                                    компонента. При инициализации код компонента ищет все нужные ему элементы и
+                                    подписывается на интересующие его события. В обработчиках событий обеспечивается 
+                                    функционирование компонента.
+                                    
+                                    Компоненты могут включать в себя другие, дочерние компоненты. За счёт такой 
+                                    композиции реализуется <a href="http://martinfowler.com/bliki/PageObject.html">Page Object pattern</a>.
+                                    Например, компонент "страница компаний" состоит из компонента "список компаний" 
+                                    и компонента "детальный просмотр компании". Компонент "детальный просмотр компании"
+                                    состоит из каких-то ещё дочерних компонентов и так далее. Все компоненты объединяются
+                                    в один корневой компонент "страница".
+
+                                    При инициализации страницы создаётся соответствующий корневой компонент. Он 
+                                    создаёт свои дочерние компоненты, а те создают свои и т.д. В примере сверху
+                                    корневой компонент CompaniesPage содержит только 1 дочерний компонент - 
+                                    CompanyAliasesComponent. CompanyAliasesComponent содержит AliasesListComponent, 
+                                    а также кнопку "Добавть alias". AliasesListComponent представляет собой список
+                                    alias-ов. Каждый элемент списка управляется классом AliasListItemComponent.
+                                </p>
                             </div>
                         </li>
                     </ol>
