implement layout loader

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 	
@@ -25,10 +25,11 @@
 		</ul>
 	</nav>
 	
-	<div ng-view></div>	
+	<div id="partial-content" ng-view></div>	
 
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<!--
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-touch.min.js"></script>
@@ -46,5 +47,6 @@
 		});
 		SystemJS.import('main.js');
 	</script>
+	-->
 </body>
 </html>
