--- a/patterns-n-practices/index.html
+++ b/patterns-n-practices/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <link rel="stylesheet" href="/layout-loader.css">
     <script type="text/javascript" src="/layout-loader.js"></script>
     <script type="text/javascript">
         new LayoutLoader().loadLayout();        
