--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title></title>
+	<title>Alexander Pavlyuk - My page</title>
 
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 	
-	<nav class="navbar navbar-default navbar-static-top" 
-		 role="navigation"
-		 ng-controller="NavbarController as vm">
+	<nav class="navbar navbar-default navbar-static-top" role="navigation">
 		<a class="navbar-brand" href="/">
 			<img src="https://avatars1.githubusercontent.com/u/1595230?v=3&s=460" alt="">
 			<span>Alexander Pavlyuk</span>
 		</a>
 		<ul class="nav navbar-nav">
-			<li ng-class="{ active: vm.isActive('/patterns-n-practices')}">
+			<li>
 				<a href="/patterns-n-practices">Patterns & Practices</a>
 			</li>
 			<li>
@@ -25,28 +23,40 @@
 		</ul>
 	</nav>
 	
-	<div id="partial-content" ng-view></div>	
+	<div id="partial-content">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+
+					<div class="jumbotron">
+						<div class="container">
+							<h1>Welcome to my page!</h1>
+							<p>
+								You can find some useful learning materials here.
+
+							</p>
+							<p>
+								<a class="btn btn-primary btn-lg" href="/patterns-n-practices">
+								Check out Patterns & Practices
+							</a>
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+			<!--
+			<div class="row">
+				<div class="col-xs-12">
+					<a href="renokin-landing/index.html">Renokin landing page</a>
+				</div>
+			</div>
+			-->
+		</div>
+	</div>	
 
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<!--
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-touch.min.js"></script>
-	
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.31/system-polyfills.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.31/system.js"></script>
-	<script>
-		SystemJS.config({
-			baseURL: '/app',
-			map: {
-				'plugin-babel': '/libs/systemjs-plugin-babel/plugin-babel.js',
-				'systemjs-babel-build': '/libs/systemjs-plugin-babel/systemjs-babel-browser.js'
-			},
-			transpiler: 'plugin-babel'
-		});
-		SystemJS.import('main.js');
-	</script>
-	-->
 </body>
 </html>
