--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="/libs/i18next/i18next-3.3.1.min.js"></script>
 	<script src="/libs/i18next/i18next-xhr-backend.0.6.0.min.js"></script>
+	<script type="text/javascript" src="/layout-loader.js"></script>
 	<script src="/scripts.js"></script>
 </body>
 </html>
