--- a/patterns-n-practices/index.html
+++ b/patterns-n-practices/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/layout-loader.css">
     <script type="text/javascript" src="/layout-loader.js"></script>
     <script type="text/javascript">
-        new LayoutLoader().loadLayout();        
+        new LayoutLoader().loadLayout();
+        console.log('yo from p-n-p!');
     </script>
 
     <div id="patterns-n-practices-page" class="container">
